# orbits

./: CMakeLists.txt  README  TODO
src/: BMPLoader.cpp  BMPLoader.h  CMakeLists.txt  Earth.cpp  Earth.h  Floor.cpp  Floor.h  Triangle.cpp  Triangle.h  Wavefront.cpp  Wavefront.h  glutil.cpp  glutil.h  main.cpp  scene1.vert  settings.h.in
src/resources/: earth.blend  earth.blend1  earth.mtl
src/shaders/: scene1.frag  scene1.vert
test/: BoostTestHelpers.cmake  CMakeLists.txt
